<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:theme="@style/Theme.Fruticion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="168dp"
                android:layout_height="195dp"

                android:layout_marginTop="48dp"
                android:contentDescription="@string/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2"
                app:srcCompat="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
                android:hint="@string/text_login_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toStartOf="@+id/pass_visibility_button"
                app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/button_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/shape_formato_botones_app"
                android:text="@string/button_login_login"
                android:textAllCaps="false"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/pass_visibility_button"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/shape_formato_botones_app"
                android:text="@string/button_login_join"
                android:textAllCaps="false"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/pass_visibility_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
                app:layout_constraintTop_toTopOf="@+id/editTextPassword"
                app:srcCompat="@drawable/ic_visibilidad" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>