<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PlainTextRegistrate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextRegisterUsername"
                android:layout_width="349dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
                android:hint="@string/text_login_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoFruticionRegistro" />

            <EditText
                android:id="@+id/editTextRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextRegisterUsername"
                app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterUsername" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/text_join_check_pass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
                app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/button_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_formato_botones_app"
                android:text="@string/button_join_join"
                android:textAllCaps="false"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword" />

            <Button
                android:id="@+id/buttonCancelRegister"
                style="@style/button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_formato_botones_app"
                android:text="@string/cancel_edit_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/buttonRegister"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

            <ImageView
                android:id="@+id/logoFruticionRegistro"
                android:layout_width="170dp"
                android:layout_height="161dp"
                android:layout_marginTop="44dp"
                android:contentDescription="@string/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/title_join"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/buttonBackToLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/buttonBackToLogin"
                app:layout_constraintTop_toTopOf="@+id/buttonBackToLogin"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/buttonBackToLogin"
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/flecha_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_flecha_up" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>